Update and rename hzquick.sty to xquick.sty

--- a/xquick.sty
+++ b/xquick.sty
@@ -2,7 +2,7 @@
 \def\filedate{2019/05/30}
 
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{hzquick}[\filedate\space Version \fileversion\space by Vee Hua Zhi]
+\ProvidesPackage{xquick}[\filedate\space Version \fileversion\space by Vee Hua Zhi]
 
 \def\xdate{\leavevmode\hbox{\the\year\twodigits\month\twodigits\day}}
 \def\twodigits#1{\ifnum#1<10 0\fi\the#1}
