--- a/main.tex
+++ b/main.tex
@@ -1,8 +1,8 @@
 \documentclass{elsarticle}
 \usepackage[utf8]{inputenc}
-\usepackage{hzquick}
+\usepackage{xquick}
 
-\title{Package: \texttt{elsquick}}
+\title{Package: \texttt{xquick}}
 \author{Vee Hua Zhi}
 \date{May 2019}
 
@@ -12,7 +12,7 @@
 \begin{document}
 \maketitle
 \xtitle{Abstract}
-\texttt{elsquick} is a package for quick notes, used with the class \texttt{elsarticle}. 
+\texttt{xquick} is a package for quick notes, used with the class \texttt{elsarticle}. 
 
 
 \xtitle{Commands}
